2003-08-08  Andrew Cagney  <cagney@redhat.com>

	* mi-main.c (captured_mi_execute_command): Add "mi2" and "mi3" to
	interpreters that hack around CLI.
	* mi-interp.c (mi3_command_loop): New function.
	(mi_interpreter_resume): Check for "mi3", default to "mi2".

2003-08-07  Andrew Cagney  <cagney@redhat.com>

	* mi-interp.c (_initialize_mi_interp): Register "mi2" and "mi3".
	Make "mi" select "mi2".

2003-07-02  Daniel Jacobowitz  <drow@mvista.com>

	* mi-out.c (mi_ui_out_impl): Add NULL for redirect member.

2003-06-17  Daniel Jacobowitz  <drow@mvista.com>

        * mi-cmds.c (mi_cmds): Add "-target-disconnect".

2003-06-11  David Carlton  <carlton@bactrian.org>

	* mi-cmd-stack.c: Include dictionary.h.
	(list_args_or_locals): Update use of ALL_BLOCK_SYMBOLS.

2003-06-11  Andrew Cagney  <cagney@redhat.com>

	* mi-main.c (get_register): Replace REGISTER_CONVERTIBLE with
	DEPRECATED_REGISTER_CONVERTIBLE.

2003-06-08  Andrew Cagney  <cagney@redhat.com>

	* mi-parse.c (_initialize_mi_parse): Delete function.
	* mi-main.c: Include "mi-main.h".
	* mi-interp.c (_initialize_mi_interp): Add declaration.
	* mi-cmd-stack.c: Include "stack.h".
	(select_frame_command_wrapper): Delete extern declaration.
	(mi_cmd_stack_select_frame): Replace select_frame_command_wrapper
	with select_frame_command.

2003-05-16  Andrew Cagney  <cagney@redhat.com>

	* mi-main.c (mi_setup_architecture_data): 

2003-05-12  Elena Zannoni  <ezannoni@redhat.com>

	* mi-mi-cmd-stack.c (list_args_or_locals): Rename VAR_NAMESPACE to
	VAR_DOMAIN.

2003-05-11  Andrew Cagney  <cagney@redhat.com>

	* mi-symbol-cmds.c: Rename "mi-cmd-symbol.c", avoid 8.3 problem.

2003-05-08  Andrew Cagney  <cagney@redhat.com>

	* mi-main.c (register_changed_p): Use MAX_REGISTER_SIZE instead of
	MAX_REGISTER_RAW_SIZE.

2003-05-08  Andrew Cagney  <cagney@redhat.com>

	* mi-main.c (get_register): Use MAX_REGISTER_SIZE.

2003-05-05  Andrew Cagney  <cagney@redhat.com>

	* mi-main.c (mi_cmd_data_write_register_values): Replace