@@ -1,3 +1,9 @@
+2003-09-10  Elena Zannoni  <ezannoni@redhat.com>
+
+	* mi-main.c (mi_setup_architecture_data): Don't use
+	DEPRECATED_REGISTER_BYTES because some architecture don't set it
+	and its default is 0.
+
 2003-08-08  Andrew Cagney  <cagney@redhat.com>
 
 	* mi-main.c (captured_mi_execute_command): Add "mi2" and "mi3" to
